openshift/microservice/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: donation-api
  namespace: gregorie769-dev
  annotations:
    image.openshift.io/triggers: |
      [
        {
          "from": {
            "kind": "ImageStreamTag",
            "name": "donation-api:latest"
          },
          "fieldPath": "spec.template.spec.containers[?(@.name==\"donation-api\")].image"
        }
      ]

spec:
  replicas: 1

  selector:
    matchLabels:
      app: donation-api

  template:
    metadata:
      labels:
        app: donation-api

    spec:
      containers:
        - name: donation-api
          image: donation-api:latest
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
