openshift/microservice/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: donation-api
  namespace: gregorie769-dev
spec:
  to:
    kind: Service
    name: donation-api

  port:
    targetPort: http

  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
